Fix icon spacing

--- a/src/komponenter/footer/lenke-med-ikon/LenkeMedIkon.less
+++ b/src/komponenter/footer/lenke-med-ikon/LenkeMedIkon.less
@@ -2,8 +2,11 @@
     display: flex;
     &--venstrestiltIkon {
         flex-direction: row-reverse;
+        span {
+            margin-left: 0.5rem;
+        }
     }
-    &__lenke {
-        flex-shrink: 0;
+    span {
+        margin-right: 0.5rem;
     }
 }
